...
          },
          drawerStyle: dynamicStyles.drawer,
          drawerPosition: 'right',
          headerLeft: () => <ProfileButton darkMode={darkMode} />,
          headerRight: () => (
            <TouchableOpacity
              testID="menu-button"
              onPress={() => navigation.dispatch(DrawerActions.openDrawer())}
              style={{ marginRight: 10 }}
            >
              <MaterialIcons name="menu" size={30} color="#912338" />
            </TouchableOpacity>
          ),
...

        {/* Hidden routes below */}
        <Drawer.Screen
          name="screens/directions"
          options={{
            drawerLabel: () => null,
            title: 'Directions',
            drawerItemStyle: { display: 'none' },
            headerShown: false,
          }}
        />
        <Drawer.Screen
          name="auth"
...
