...
        <TextInput
          style={[styles.searchInput, dynamicStyles.searchInput]}
          placeholder={placeholder || t.searchPlaceholder || "Search for buildings, locations..."}
          placeholderTextColor={isDarkMode ? '#999' : '#A0A0A0'}
          value={value}
          onChangeText={handleChangeText}
          testID="search-input"
        />
       { value.length > 0 &&
        (<TouchableOpacity
          style={styles.clearButton}
          onPress={handleClearSearch} 
          testID="clear-button"
...
