...
            id: "H-141",
            name: "H-141",
            location: { x: 18, y: 2 },
        },
        {
            id: "H1-030-1",
            name: "H-030-1",
            location: { x: 6, y: 4 },
        },
        {
            id: "H-120",
            name: "H-120",
            location: { x: 10, y: 8 },
...
