...
                    <Text
                        style={[
                            styles.toggleText,
                            selectedCampus === 'SGW' && styles.activeText,
                        ]}
                    >
                        SGW Campus
                    </Text>
                </TouchableOpacity>
            </View>
        </View>
    );
};
...
