const buildings = [
    {
        id: 'H',
        name: 'Hall Building',
        latitude: 45.4971807962744,
        longitude: -73.57881293261063,
        boundary: [
            { latitude: 45.4968261, longitude: -73.5788241 },
            { latitude: 45.4970373, longitude: -73.5786245 },
            { latitude: 45.4972544, longitude: -73.5784089 },
...
