...
    const isEndLoyola = isNearCampus(end, LOYOLA_COORDS);
    const isEndSGW = isNearCampus(end, SGW_COORDS);

    if (!((isStartLoyola && isEndSGW) || (isStartSGW && isEndLoyola))) {
      return Alert.alert(
        "Shuttle Service",
        "Shuttle service is only available between Loyola and SGW campuses.",
        [{ text: "OK" }]
      );
    }

    const fromCampus = isStartLoyola ? "loyola" : "sgw";
    const nextTime = getNextShuttleTime(fromCampus);
    setDirections([
...
                fillColor="rgba(0, 122, 255, 0.7)"
              />
            )}
            {startRoomCoordinates=== null && startLocation && selectedStart !== "userLocation" && (
              <Marker 
              coordinate={  startLocation} 
              title="Start" pinColor="green" 
              onPress={() => handleMarkerPress(  startLocation)}
              
              />
            )}


...
        </View>



        {isLoading && (
          <View style={stylesB.loadingCard}>
            <Text style={stylesB.loadingText}>Loading route...</Text>
          </View>
        )}
        {error && (
          <View style={stylesB.errorCard}>
            <Text style={stylesB.errorText}>{error}</Text>
          </View>
...
