...
}) => {

    const router = useRouter();
    const startLocationData = [
        { label: 'My Location', value: 'userLocation' },
        { label: 'SGW Campus', value: 'SGWCampus' },
        { label: 'Loyola Campus', value: 'LoyolaCampus' },
        { label: customStartRoomName == '' ? 'Classroom' :  customStartRoomName, value: 'classroom'},
        { label: customStartName == '' ? 'Custom Location' : customStartName, value: 'custom' },
    ];

    const destinationData = [
        { label:`${buildingName}`, value: 'current' },
...
                    >
                        {mode === 'SHUTTLE' ? (
                            <Text style={[
                                { fontSize: 12 },
                                travelMode === mode ? { color: '#912338' } : { color: '#666' }
                            ]}>
                                Shuttle
                            </Text>
                        ) : (
                            <Ionicons 
                                name={mode === 'DRIVING' ? 'car' : mode === 'WALKING' ? 'walk' : 'bus'}
                                size={25}
                                color={travelMode === mode ? '#912338' : '#666'}
...
