...
        "address": "7141 Sherbrooke St W, Montreal, QC",
        "contact": "Phone: +1 514-848-2424 ext. 3400",
        "description": "The Loyola Jesuit Hall and Conference Center is a key venue at Loyola Campus for academic and professional events, providing modern facilities for conferences, meetings, and social gatherings."
    },    
    {
        "id": "SP",
        "name": "Richard J Renaud Science Complex",
        "latitude": 45.4572512,
        "longitude": -73.6407593,
        "boundary": [
            { "latitude": 45.4569746, "longitude": -73.6408295 },
            { "latitude": 45.4570166, "longitude": -73.6409402 },
            { "latitude": 45.4569934, "longitude": -73.6409581 },
...
