# Maestro YAML File for FindMyClass
# Ensure that the appId below matches your bundle ID in app.json
appId: com.findmyclass.app

---
- launchApp:
    clearState: true   # Clears previous app state before launching

- waitForAnimationToEnd  # Ensures the app is fully loaded

# Tap the menu button to open navigation
- tapOn:
    id: "profile-button"
- waitForAnimationToEnd  # Ensure menu is open

- tapOn: "Login"
- waitForAnimationToEnd  # Ensure login screen is loaded

- tapOn: "Sign in with Google"

- tapOn: "Continue"

- tapOn: "MiniCap minicapsoen390@gmail.com"

- waitForAnimationToEnd

- scroll

- tapOn: "Continue"

- waitForAnimationToEnd

- tapOn: "Course Schedule"

- tapOn: "Sync Calendar"

- tapOn:
    point: "50%,50%"

- tapOn:
    point: "50%,56%"

- tapOn:
    point: "53%,53%"

- assertVisible:
    id: "card:com.findmyclass.app:sceneID:com.findmyclass.app-default"

- tapOn:
    point: "50%,56%"

- tapOn: "Sync Calendar"

- tapOn:
    point: "48%,56%"

- tapOn:
    point: "54%,33%"

- assertVisible:
    id: "card:com.findmyclass.app:sceneID:com.findmyclass.app-default"